css/main.css
/* ... */
.header {
  width: 100%;
  height: 60px;
  position: fixed;
  top: 0;
  background: #191747;
  z-index: 1000;
  box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
  .header .container {
    height: 60px; }
    .header .container .header-content {
      font-weight: 400;
      height: inherit;
      line-height: 57px;
      color: #F6F6F6;
      text-decoration: none; }
    .header .container .logo-wrapper {
      display: -webkit-box;
      display: flex;
      -webkit-box-align: center;
              align-items: center; }
      .header .container .logo-wrapper .logo-img {
        height: 3rem;
        width: 3rem;
        min-width: 3rem; }
      .header .container .logo-wrapper .logo-text {
        font-size: 3rem;
        line-height: 3rem;
        letter-spacing: -3px;
        text-align: left;
        padding-bottom: .5rem;
        box-sizing: content-box; }
    .header .container .profile-menu {
      height: 60px;
      position: relative; }
      .header .container .profile-menu .menu-switcher {
        opacity: 0;
        width: 100%;
        height: 100%;
        margin: 0;
        position: absolute;
        top: 0;
        left: 0;
        cursor: pointer; }
        .header .container .profile-menu .menu-switcher:checked ~ .menu-content {
          display: block; }
      .header .container .profile-menu .menu-underlay {
        display: -webkit-box;
        display: flex;
        flex-wrap: nowrap;
        -webkit-box-align: center;
                align-items: center;
        -webkit-box-pack: end;
                justify-content: flex-end; }
        .header .container .profile-menu .menu-underlay .name {
          color: #F6F6F6;
          margin-right: 5px;
          height: 60px;
          width: 255px;
          text-align: right; }
        .header .container .profile-menu .menu-underlay .avatar {
          height: 40px;
          width: 40px;
          min-height: 40px;
          min-width: 40px;
          border-radius: 50%; }
      .header .container .profile-menu .menu-content {
        display: none;
        list-style: none;
        background: #191747;
        width: 160px;
        float: right;
        box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
        .header .container .profile-menu .menu-content .menu-item {
          display: block;
          height: 60px; }
          .header .container .profile-menu .menu-content .menu-item:hover {
            background: #36345e; }
          .header .container .profile-menu .menu-content .menu-item a {
            text-decoration: none;
            display: block;
            color: #F6F6F6;
            padding-left: 18px; }
            .header .container .profile-menu .menu-content .menu-item a:visited {
              color: #F6F6F6; }

.login-page {
  background: #191747;
  height: 100%;
  display: -webkit-box;
  display: flex;
  -webkit-box-align: center;
          align-items: center; }
  .login-page .logo-wrapper .logo-img {
    margin: 0 auto;
    width: 80px;
    height: 80px; }
  .login-page .logo-wrapper .logo-text {
    margin-bottom: 30px;
    text-align: center;
    font-size: 5rem;
    line-height: 5rem; }
    @media (max-width: 543px) {
      .login-page .logo-wrapper .logo-text {
        font-size: 4.5rem;
        line-height: 4.5rem; } }
  .login-page .auth-button {
    height: 40px;
    color: #191747;
    background: #F6F6F6;
    cursor: pointer;
    text-align: center;
    line-height: 40px;
    margin-bottom: 60px;
    box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5);
    border-radius: 2px; }
    .login-page .auth-button:hover {
      background: #797979; }

.content {
  margin-top: 80px;
  overflow: auto;
  -webkit-overflow-scrolling: touch; }
  .content .playlist .loader, .content .playlist .song-container, .content .playlist .search-container {
    height: 60px;
    margin-bottom: 10px;
    background: #F6F6F6;
    box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5);
    border-radius: 2px; }
  .content .playlist .loader, .content .playlist .search-container {
    display: -webkit-box;
    display: flex;
    -webkit-box-align: center;
            align-items: center;
    -webkit-box-pack: center;
            justify-content: center; }
  .content .playlist .search-container form {
    width: 100%;
    margin: auto 10px auto; }
    .content .playlist .search-container form .search-field {
      display: block;
      margin: 0;
      vertical-align: middle;
      text-align: center;
      border: 0;
      height: 30px;
      border-radius: 2px;
      box-sizing: border-box;
      padding-left: 5px;
      padding-right: 5px;
      width: 100%; }
      .content .playlist .search-container form .search-field:focus {
        outline: 0;
        box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5);
        -webkit-transition: box-shadow 0.1s ease-in;
        transition: box-shadow 0.1s ease-in; }
      .content .playlist .search-container form .search-field::-webkit-input-placeholder, .content .playlist .search-container form .search-field:-moz-placeholder, .content .playlist .search-container form .search-field::-moz-placeholder, .content .playlist .search-container form .search-field:-ms-input-placeholder {
        text-align: center; }
  .content .playlist .song-container {
    position: relative; }
    .content .playlist .song-container .play-button {
      cursor: pointer;
      width: 60px;
      height: 58px;
      float: left;
      display: -webkit-box;
      display: flex;
      -webkit-box-align: center;
              align-items: center;
      -webkit-box-pack: center;
              justify-content: center; }
      .content .playlist .song-container .play-button .icon {
        height: 20px;
        width: auto; }
    .content .playlist .song-container .info-wrapper {
      box-sizing: border-box;
      padding-top: 0.75rem;
      float: left;
      height: 58px;
      max-width: calc(100% - 70px); }
/* ... */

